# ContextDroid

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  INSTALL.md  README.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_pt.md  README_zh.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  UPSTREAM.md  build.rs  deny.toml  install.ps1  install.sh  release-please-config.json
.agent/: EXEC_PLAN.md
.codex/agents/: rtk-testing-specialist.toml  rust-rtk.toml  technical-writer.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  docs-pipeline-contract.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/hooks/: rtk-rewrite.json
.github/workflows/: CICD.md  cd.yml  ci.yml  next-release.yml  package-dry-run.yml  post-release-smoke.yml  pr-target-check.yml  release.yml
Formula/: contextdroid.rb
benchmarks/: alpha-v0.1.0-alpha.1.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONTEXTDROID_PRODUCT_SPEC.md  FILTER_MATRIX.md  INTEGRATIONS.md  MIGRATION.md  PILOT.md  RELEASE_ARTIFACTS.md  RELEASE_CHECKLIST.md  SAFETY_CONTRACT.md
docs/contributing/: ARCHITECTURE.md  CODING_PRACTICES.md  TECHNICAL.md
docs/guide/: index.md
docs/maintainers/: MAINTAINERS_APPLY.md
docs/releases/: v0.1.0-alpha.1.md
docs/usage/: AUDIT_GUIDE.md  FEATURES.md  TRACKING.md
docs/validation/: INTERNAL_ANDROID_PROJECT.md  README.md
release/: targets.json
scripts/: check-stale-brand.sh  smoke-android-linux.sh  smoke-claude-linux.sh  validate-architecture-samples-linux.sh  validate-docs.sh
src/: integrations.rs  main.rs  migration.rs  product.rs
src/analytics/: gain.rs  (+2 more)
tests/: android_fixture_contract.rs  grep_context_test.rs  grep_faithful_format_test.rs  guard_integration_test.rs  release_contract.rs  search_compress_test.rs  search_error_test.rs  search_faithful_test.rs  security_workflow_contract.rs
(+141 files in other folders)
