[package]
name = "contextdroid"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.91"
authors = ["ContextDroid contributors", "Patrick Szymkowiak"]
description = "Android-aware command output reduction with complete raw recovery"
license = "Apache-2.0"
homepage = "https://github.com/HawkItzme/ContextDroid"
repository = "https://github.com/HawkItzme/ContextDroid"
readme = "README.md"
keywords = ["android", "gradle", "cli", "llm", "diagnostics"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.103"
ignore = "0.4"
walkdir = "2"
regex = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
colored = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
chrono = "0.4"
tempfile = "3"
sha2 = "0.10"
getrandom = "0.4"
flate2 = "1.0"
quick-xml = "0.41"
which = "8"
automod = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
toml = "0.8"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# cargo-deb configuration
[package.metadata.deb]
maintainer = "ContextDroid contributors"
copyright = "2024-2026 RTK and ContextDroid contributors"
license-file = ["LICENSE", "0"]
extended-description = "ContextDroid provides conservative Android-aware diagnostics with durable raw-output recovery."
section = "utility"
priority = "optional"
assets = [
    ["target/release/contextdroid", "usr/bin/", "755"],
]
# cargo-generate-rpm configuration
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/contextdroid", dest = "/usr/bin/contextdroid", mode = "755" },
]

[lints.rust]
unsafe_code = "deny"
warnings = "deny"
